--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="library.js" defer></script>
 </head>
 <body>
-    <h1>Library</h1>
+    <h1 class="page-title">Library</h1>
+    <button class="new-book">New Book</button>
 </body>
 </html>
