New Book Form -Added a form to submit info for a new Book -Still working on basic styling -Will wrap in dialog modal to be displayed on click of 'New Book' button

--- a/index.html
+++ b/index.html
@@ -10,5 +10,28 @@
 <body>
     <h1 class="page-title">Library</h1>
     <button class="new-book">New Book</button>
+    <form action="" method="" class="newbookform">
+        <div>
+            <label for="title">Title</label>
+            <input type="text" id="title">
+        </div>
+        <div>
+            <label for="author">Author</label>
+            <input type="text" id="author">
+        </div>
+        <div>
+            <label for="pubDate">Release</label>
+            <input type="text" id="pubDate">
+        </div>
+        <div>
+            <label for="read">Read</label>
+            <input type="radio" id="read" name="read-status" value="read">
+            
+            <label for="not-read">Not Read</label>
+            <input type="radio" id="not-read" name="read-status" value="not read">
+        </div>
+
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
