Dialog/Form Styling -Updated styling for the dialog modal and form to be more in line with the rest of the page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button class="new-book" id="new-book">New Book <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13.09 20C13.21 20.72 13.46 21.39 13.81 22H6C4.89 22 4 21.11 4 20V4C4 2.9 4.89 2 6 2H18C19.11 2 20 2.9 20 4V13.09C19.67 13.04 19.34 13 19 13C18.66 13 18.33 13.04 18 13.09V4H13V12L10.5 9.75L8 12V4H6V20H13.09M20 18V15H18V18H15V20H18V23H20V20H23V18H20Z" /></svg></button>
     <dialog id="dialog">
         <form class="newbookform">
+            <button type="button" id="close-button">x</button>
             <div>
                 <label for="title">Title</label>
                 <input type="text" id="title">
@@ -31,7 +32,7 @@
                 <label for="not-read">Not Read</label>
                 <input type="radio" id="not-read" name="read-status" value="not read">
             </div>
-            <button type="button" id="submit-button" value="submit">Submit</button>
+            <button type="button" id="submit-button" value="submit">Add Book</button>
         </form>
     </dialog>
 </body>
